--- a/css/style.css
+++ b/css/style.css
@@ -587,5 +587,12 @@ input,select{ font-family:arial, Helvetica, sans-serif; padding:1px;}
 
 }
 
+@media screen and (max-width: 768px){
+	.mobile_nav {
+	  position: absolute;
+	  width: 123px;
+	  right: 0;
+	}
+  }
 
 
