--- a/css/style.css
+++ b/css/style.css
@@ -107,11 +107,11 @@ input,select{ font-family:arial, Helvetica, sans-serif; padding:1px;}
 /*mobile menu*/
 .navbar-toggle{margin:15px 0px 0 0;}
 .navbar-toggle .icon-bar{background-color:#333;}
-.mobile_nav{display:none; background:#0B8C01;}
+.mobile_nav{display:none; background:#143881;}
 .mobile_nav ul{margin:0px;padding:0px; list-style-type:none;}
 .mobile_nav li{margin:0px;padding:0px; list-style-type:none;border-bottom:1px solid #fff;position: relative;}
 .mobile_nav ul li a{padding-left: 10px;color: #fff;display: block;font-size: 14px;height: 38px;line-height: 38px; font-weight:bold;}
-.mobile_nav ul li a:hover, .mobile_nav ul li a:active {background-color:#27A61D;}
+.mobile_nav ul li a:hover, .mobile_nav ul li a:active {background-color:#143881;}
 .mobile_nav ul ul{margin: 0;padding:0 10px 10px 10px; display:none;}
 .mobile_nav ul ul li {border-bottom:none;margin: 0;padding: 0;}
 .mobile_nav ul ul li a {padding: 0;padding-left: 5px;font-size:14px;font-weight:normal;height: 38px;line-height: 38px;}
